test/valid/assignment1.csmall
int main() {
	int a = 3;
	int b = 2;
	int c = b = 3;
	int d = b = c = a = 32*2;
	return 0;
}